fixes for getting all infos

--- a/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
+++ b/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
@@ -22,7 +22,7 @@
           <td>{{brigadeDailyReport?.reportNumber}}</td>
           <td>{{brigadeDailyReport?.author?.firstName + ' ' + brigadeDailyReport?.author?.lastName}}</td>
           <td><a
-            [routerLink]="['/buildings/' + brigadeDailyReport?.buildingDailyReport?.building.id + '/daily-report/' + brigadeDailyReport?.buildingDailyReport?.id + '/brigade-report/' + brigadeDailyReport.id]">Edit</a>
+            [routerLink]="['/buildings/' + brigadeDailyReport?.buildingDailyReport?.building.id + '/daily-report/' + brigadeDailyReport?.buildingDailyReport?.id + '/brigade-report/' + brigadeDailyReport?.id]">Edit</a>
           </td>
         </tr>
         </tbody>
