--- a/Budfirmex/src/app/buildings/components/materials-used/material-used.component.html
+++ b/Budfirmex/src/app/buildings/components/materials-used/material-used.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <app-materials-used-modal
-    [brigadeDailyReportId]="brigadeDailyReport.id"
+    [brigadeDailyReportId]="brigadeDailyReport?.id"
     (refreshFromModal)="refreshData.emit()">
   ></app-materials-used-modal>
 <h2 class="stuff-title">Materiały</h2>
@@ -19,7 +19,7 @@
                 <td>{{ materialUsed.material.name + ' (' + materialUsed.quantity + ')'}}</td>
                 <td>  <app-materials-used-modal
                   [materialUsed]="materialUsed"
-                  [brigadeDailyReportId]="brigadeDailyReport.id"
+                  [brigadeDailyReportId]="brigadeDailyReport?.id"
                   (refreshFromModal)="refreshData.emit()">
                   ></app-materials-used-modal></td>
             </tr>
