--- a/Budfirmex/src/app/buildings/pages/brigade-daily-report/brigade-daily-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/brigade-daily-report/brigade-daily-report.component.html
@@ -9,10 +9,10 @@
   <div class="row">
     <div class="col-12">
       <app-report-details
-        [name]="brigadeDailyReport.buildingDailyReport.building.name"
-        [buildingNumber]="brigadeDailyReport.buildingDailyReport.building.buildingNumber"
-        [date]="brigadeDailyReport.date"
-        [weatherCondition]="brigadeDailyReport.buildingDailyReport.weatherCondition"></app-report-details>
+        [name]="brigadeDailyReport?.buildingDailyReport?.building?.name"
+        [buildingNumber]="brigadeDailyReport?.buildingDailyReport?.building?.buildingNumber"
+        [date]="brigadeDailyReport?.date"
+        [weatherCondition]="brigadeDailyReport?.buildingDailyReport?.weatherCondition"></app-report-details>
     </div>
   </div>
   <div class="row my-3">
