--- a/Budfirmex/src/app/buildings/pages/building-daily-report/building-daily-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/building-daily-report/building-daily-report.component.html
@@ -9,10 +9,10 @@
   <div class="row">
     <div class="col-12">
       <app-report-details
-        [buildingNumber]="buildingDailyReport.building.buildingNumber"
-        [date]="buildingDailyReport.date"
-        [name]="buildingDailyReport.building.name"
-        [weatherCondition]="buildingDailyReport.weatherCondition"
+        [buildingNumber]="buildingDailyReport?.building?.buildingNumber"
+        [date]="buildingDailyReport?.date"
+        [name]="buildingDailyReport?.building?.name"
+        [weatherCondition]="buildingDailyReport?.weatherCondition"
       ></app-report-details>
     </div>
   </div>
