--- a/Budfirmex/src/app/buildings/pages/equipment-daily-report/equipment-daily-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/equipment-daily-report/equipment-daily-report.component.html
@@ -7,10 +7,10 @@
   <div class="row">
     <div class="col-12">
       <app-report-details
-        [buildingNumber]="equipmentDailyReport.buildingDailyReport.building.buildingNumber"
-        [weatherCondition]="equipmentDailyReport.buildingDailyReport.weatherCondition"
-        [date]="equipmentDailyReport.date"
-        [name]="equipmentDailyReport.reportNumber"
+        [buildingNumber]="equipmentDailyReport?.buildingDailyReport?.building?.buildingNumber"
+        [weatherCondition]="equipmentDailyReport?.buildingDailyReport?.weatherCondition"
+        [date]="equipmentDailyReport?.date"
+        [name]="equipmentDailyReport?.reportNumber"
       ></app-report-details>
     </div>
   </div>
