--- a/Budfirmex/src/app/buildings/components/comments/comments.component.html
+++ b/Budfirmex/src/app/buildings/components/comments/comments.component.html
@@ -1,24 +1,28 @@
 <div class="container-fluid">
-    <app-comment-modal></app-comment-modal>
-    <h2 class="comments-title">Uwagi</h2>
-    <div class="table">
-        <div class="white-background table-margin">
-            <table>
-                <thead>
-                    <tr>
-                        <td>Numer raportu</td>
-                        <td>Sporządził</td>
-                        <td>Akcja</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let comment of comments">
-                        <!-- <td>{{dailyReports.reportNumber}}</td>
-                        <td>{{dailyReports.drafted}}</td>
-                        <td><button class="btn btn-sm btn-warning">Edytuj</button></td> -->
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+  <app-comment-modal
+    [buildingDailyReportId]="buildingDailyReport?.id"
+    (refreshFromModal)="refreshData.emit()"></app-comment-modal>
+  <h2 class="comments-title">Uwagi</h2>
+  <div class="table">
+    <div class="white-background table-margin">
+      <table>
+        <thead>
+        <tr>
+          <td>Numer</td>
+          <td>Sporządził</td>
+          <td>Komentarz</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let comment of comments">
+          <td>{{comment.commentNumber}}</td>
+          <td>{{comment.author?.firstName + ' ' + comment.author?.lastName}}</td>
+          <td>
+            <textarea disabled>{{comment.comment}}</textarea>
+          </td>
+        </tr>
+        </tbody>
+      </table>
     </div>
+  </div>
 </div>
