--- a/Budfirmex/src/app/buildings/components/report-details/report-details.component.html
+++ b/Budfirmex/src/app/buildings/components/report-details/report-details.component.html
@@ -15,7 +15,7 @@
             </div>
             <div class="col-md-3">
                 <div class="report-details__label--small">Pogoda</div>
-                <div class="report-details__value--small">{{ weatherCondition.weatherCondition }}</div>
+                <div class="report-details__value--small">{{ weatherCondition?.weatherCondition }}</div>
             </div>
         </div>
     </div>
