--- a/Budfirmex/src/app/dashboard/modals/new-building/new-building-modal.component.html
+++ b/Budfirmex/src/app/dashboard/modals/new-building/new-building-modal.component.html
@@ -8,30 +8,33 @@
   </button>
 </div>
 <div class="modal-body">
-  <form>
-    <div class="form-group">
-      <label for="road_name">Nazwa drogi</label>
-      <input type="text" id="road_name" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="location">Lokalizacja</label>
-      <input type="text" id="location" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="start_date">Planowany termin rozpoczęcia</label>
-      <input type="date" id="start_date" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="end_date">Planowany termin zakończenia</label>
-      <input type="date" id="end_date" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="engineers">Inżynierowie budowy</label>
-      <select id="engineers" class="form-control">
-        <option *ngFor="let engineer of engineers" [value]="engineer.id">{{ engineer.lastName + ' ' + engineer.lastName}}</option>
-      </select>
-    </div>
-  </form>
+  <div class="form-group">
+    <label for="building_number">Numer budowy</label>
+    <input type="text" id="building_number" class="form-control" [(ngModel)]="model.buildNumber">
+  </div>
+  <div class="form-group">
+    <label for="road_name">Nazwa drogi</label>
+    <input type="text" id="road_name" class="form-control" [(ngModel)]="model.name">
+  </div>
+  <div class="form-group">
+    <label for="location">Lokalizacja</label>
+    <input type="text" id="location" class="form-control" [(ngModel)]="model.coordinates">
+  </div>
+  <div class="form-group">
+    <label for="start_date">Planowany termin rozpoczęcia</label>
+    <input type="date" id="start_date" class="form-control" [(ngModel)]="model.plannedStartDate">
+  </div>
+  <div class="form-group">
+    <label for="end_date">Planowany termin zakończenia</label>
+    <input type="date" id="end_date" class="form-control" [(ngModel)]="model.plannedEndDate">
+  </div>
+  <div class="form-group">
+    <label for="engineers">Inżynierowie budowy</label>
+    <select id="engineers" class="form-control" [multiple]="true" [(ngModel)]="model.engineersIds">
+      <option *ngFor="let engineer of engineers"
+              [value]="engineer.id">{{ engineer.firstName + ' ' + engineer.lastName}}</option>
+    </select>
+  </div>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-outline-dark" (click)="createBuilding()">Zapisz</button>
