--- a/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
@@ -13,40 +13,34 @@
     <form #form="ngForm">
       <div class="form-group">
         <label for="type_work">Typ roboty</label>
-        <select id="type_work" class="form-control">
-          <option *ngFor="let labourNorm of labourNorms" [value]="labourNorm.id">{{ labourNorm.labourName }}</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="unit">Jednostka</label>
-        <select id="unit" class="form-control">
-          <option></option>
+        <select id="type_work" class="form-control" name="type_work" [(ngModel)]="model.labourNormId">
+          <option *ngFor="let labourNorm of labourNorms" [value]="labourNorm.id">{{ labourNorm.labourName }} ({{labourNorm.unitValue}})</option>
         </select>
       </div>
       <div class="form-group">
         <label for="quantity">Ilość</label>
         <input type="text" id="quantity" name="quantity" class="form-control" required
-          [(ngModel)]="model.quantity" #quantity="ngModel">
+          [(ngModel)]="model.quantityOfWork" #quantity="ngModel">
       </div>
       <ng-container *ngIf="quantity.invalid && quantity.touched">
         <div class="alert alert-danger" role="alert" *ngIf="quantity.errors.required">
           Ilość jest wymagana. Podaj ilość.
         </div>
       </ng-container>
-      <div class="form-group">
-        <label for="standard">Norma czasu pracy</label>
-        <input type="text" id="standard" name="standard" class="form-control" required [(ngModel)]="model.standard"
-          #standard="ngModel">
-      </div>
-      <ng-container *ngIf="standard.invalid && standard.touched">
-        <div class="alert alert-danger" role="alert" *ngIf="standard.errors.required">
-          Norma czasu pracy jest wymagana. Wpisz normę.
-        </div>
-      </ng-container>
+<!--      <div class="form-group">-->
+<!--        <label for="standard">Norma czasu pracy</label>-->
+<!--        <input type="text" id="standard" name="standard" class="form-control" required [(ngModel)]="model.standard"-->
+<!--          #standard="ngModel">-->
+<!--      </div>-->
+<!--      <ng-container *ngIf="standard.invalid && standard.touched">-->
+<!--        <div class="alert alert-danger" role="alert" *ngIf="standard.errors.required">-->
+<!--          Norma czasu pracy jest wymagana. Wpisz normę.-->
+<!--        </div>-->
+<!--      </ng-container>-->
       <div class="form-group">
         <label for="rating">Ocena jakości robót</label>
-        <select id="rating" class="form-control">
-          <option></option>
+        <select id="rating" class="form-control" name="qualityEvaluation" [(ngModel)]="model.qualityEvaluationId">
+          <option *ngFor="let qualityEvaluation of qualityEvaluations" [value]="qualityEvaluation.id">{{ qualityEvaluation.name }} ({{qualityEvaluation.value}})</option>
         </select>
       </div>
     </form>
