--- a/Budfirmex/src/app/buildings/pages/building-daily-report/building-daily-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/building-daily-report/building-daily-report.component.html
@@ -33,7 +33,7 @@
       <app-comments
         [buildingDailyReport]="buildingDailyReport"
         [comments]="comments"
-        (refreshData)="fetchBrigadesReports()"></app-comments>
+        (refreshData)="fetchComments()"></app-comments>
     </div>
   </div>
 </div>
