--- a/Budfirmex/src/app/buildings/pages/equipment-daily-report/equipment-daily-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/equipment-daily-report/equipment-daily-report.component.html
@@ -10,7 +10,7 @@
         [buildingNumber]="equipmentDailyReport?.buildingDailyReport?.building?.buildingNumber"
         [weatherCondition]="equipmentDailyReport?.buildingDailyReport?.weatherCondition"
         [date]="equipmentDailyReport?.date"
-        [name]="equipmentDailyReport?.reportNumber"
+        [name]="equipmentDailyReport?.buildingDailyReport.building.name"
       ></app-report-details>
     </div>
   </div>
